--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!--Font Awesome-->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="indexstyling.css">
-  <title>Task List</title>
+  <title>Grocery List</title>
 </head>
 <body>
   <div class="container">
