--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="indexstyling.css">
   <title>Grocery List</title>
 </head>
-<body>
+<body class = bg-dark>
   <div class="container">
     <div class="row">
       <div class="col s12">
